AC_INIT(src)

# Making releases:
#   DOTCONF_MICRO_VERSION += 1;
#   DOTCONF_INTERFACE_AGE += 1;
#   DOTCONF_BINARY_AGE    += 1;
# if any function have been added, set DOTCONF_INTERFACE_AGE to 0.
# if backwards compatibility has been broken,
# set DOTCONF_BINARY_AGE and DOTCONF_INTERFACE_AGE to 0.
#
DOTCONF_MAJOR_VERSION=1
DOTCONF_MINOR_VERSION=1
DOTCONF_MICRO_VERSION=0
DOTCONF_INTERFACE_AGE=0
DOTCONF_BINARY_AGE=0
DOTCONF_VERSION=$DOTCONF_MAJOR_VERSION.$DOTCONF_MINOR_VERSION.$DOTCONF_MICRO_VERSION

AC_SUBST(DOTCONF_MAJOR_VERSION)
AC_SUBST(DOTCONF_MINOR_VERSION)
AC_SUBST(DOTCONF_MICRO_VERSION)
AC_SUBST(DOTCONF_INTERFACE_AGE)
AC_SUBST(DOTCONF_BINARY_AGE)
AC_SUBST(DOTCONF_VERSION)

# libtool versioning
LT_RELEASE=$DOTCONF_MAJOR_VERSION.$DOTCONF_MINOR_VERSION
LT_CURRENT=`expr $DOTCONF_MICRO_VERSION - $DOTCONF_INTERFACE_AGE`
LT_REVISION=$DOTCONF_INTERFACE_AGE
LT_AGE=`expr $DOTCONF_BINARY_AGE - $DOTCONF_INTERFACE_AGE`
AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AM_INIT_AUTOMAKE(dotconf, 1.1.0)
AM_CONFIG_HEADER(config.h)

AC_CANONICAL_HOST
AC_PROG_CC
AM_PROG_LIBTOOL

AM_MAINTAINER_MODE

# Honor aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_ADD_INCLUDE(libpool)
CFLAGS="$CFLAGS $INCLUDES -Wall -g"

AC_OUTPUT([
Makefile
libpool/Makefile
src/Makefile
doc/Makefile
dotconf-config
dotconf.spec
dotconf.pc
])

echo
echo
echo \-\*\- dot.conf $VERSION \-\*\-
echo
echo configure complete, now type \'make\'
echo

