
examplesdir = $(docdir)/examples

nobase_dist_examples_DATA = README \
	argdouble/Makefile \
	argdouble/argdouble.c \
	argdouble/argdouble.conf \
	argdouble/output \
	caseinsensitive/Makefile \
	caseinsensitive/caseinsensitive.c \
	caseinsensitive/caseinsensitive.conf \
	caseinsensitive/output \
	context/Makefile \
	context/context.c \
	context/context.conf \
	context/output \
	duplicates/Makefile \
	duplicates/duplicate.c \
	duplicates/first_module.c \
	duplicates/output \
	duplicates/sample.conf \
	duplicates/second_module.c \
	errorhandler/Makefile \
	errorhandler/errorhandler.c \
	errorhandler/errorhandler.conf \
	errorhandler/output \
	fallback/Makefile \
	fallback/fallback.c \
	fallback/fallback.conf \
	fallback/output \
	maketest.sh \
	libpool/libpool.h \
	libpool/pool.c \
	libpool/Makefile \
	modules/Makefile \
	modules/include.conf \
	modules/module.c \
	modules/my_module.c \
	modules/output \
	modules/sample.conf \
	noinline/Makefile \
	noinline/noinline.c \
	noinline/noinline.conf \
	noinline/output \
	simple/Makefile \
	simple/included.conf \
	simple/linecat.conf \
	simple/output \
	simple/simple.c \
	simple/simple.conf

